--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav class="navbar bg-dark">
-        <div class="navbar-brand text-light">Code Quiz</div>
+        <div class="navbar-brand text-light">Quiz Generator</div>
     </nav>
 
 <main class="container">
